@@ -7,6 +7,7 @@
  - Add version() method.
  - Add tests for transform().
  - Add 'version' parameter.
+ - Fix transform() @params.
  - Improve licensing.
  - Update copyright years.
 
